force-app/main/default/objects/Master__c/Master__c.object-meta.xml
<CustomObject>
    <description>Generic master side of a master / detail relationship.</description>
    <label>Master</label>
    <nameField>
        <label>Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>