force-app/main/default/objects/Master__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Count of the number of detail records</description>
    <label>Count</label>
    <summaryForeignKey>Detail__c.Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>