force-app/main/default/objects/Master__c/fields/Master_Value__c.field-meta.xml
<CustomField>
    <fullName>Master_Value__c</fullName>
    <label>Master Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>