force-app/main/default/objects/Master__c/fields/Sum__c.field-meta.xml
<CustomField>
    <fullName>Sum__c</fullName>
    <description>Sum of the value of all detail Records</description>
    <label>Sum</label>
    <summarizedField>Detail__c.Value__c</summarizedField>
    <summaryForeignKey>Detail__c.Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>